# submodule_example

./: .gitmodules
LibGIST/: CMakeLists.txt
LibGIST/include/: clany_defs.h
LibGIST/src/: CMakeLists.txt  DisplayImage.cpp  gist.cpp  libgist.cpp  main.cpp
